--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
                 <!-- <form> -->
                   <div class="form-group">
                     <label class="container">Calling Voters
-                      <input class="form-control" id="call" type="checkbox">
+                      <input class="form-control" id="calling" type="checkbox">
                       <span class="checkmark"></span>
                     </label>
                     <label class="container">Social Media Pages
                       <input class="form-control" id="media" type="checkbox">
                       <span class="checkmark"></span>
                     </label>
-                    <label class="container">Fundraiing
+                    <label class="container">Fundraisng
                       <input class="form-control" id="fundraising" type="checkbox">
                       <span class="checkmark"></span>
                     </label>
