--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="row">
           <div class="col-lg-12">
             <div class="panel panel-default">
-              <div id="myDIV" class="panel-heading">
+              <div class="panel-heading">
                 <h3 class="panel-title">Interests</h3>
               </div>
               <div class="panel-body">
