--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       <input class="form-control" id="media" type="checkbox">
                       <span class="checkmark"></span>
                     </label>
-                    <label class="container">Fundraisng
+                    <label class="container">Fundraising
                       <input class="form-control" id="fundraising" type="checkbox">
                       <span class="checkmark"></span>
                     </label>
